--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,23 @@
-	NODE_ENV=development
-	PORT=8005
+NODE_ENV=development
+PORT=8005
 
-	# url del actual dominio del bot
-	ORIGIN=https://dominio-bot.com
+# url del actual dominio del bot
+ORIGIN=https://dominio-bot.com
 
-	# url del backend
-	API=https://dominio-back.com
+# url del backend
+API=https://dominio-back.com
 
-	# Token del bot de telegram (bot father)
-	TOKEN_BOT=uN8UHh98H98h98H98h899h98HXN9NX3299,
+# Token del bot de telegram (bot father)
+TOKEN_BOT=uN8UHh98H98h98H98h899h98HXN9NX3299,
 
-	# Token del tunel para que se conecte telegram (ngrok.com)
-	TOKEN_BRIDGE=uN8UHh98H98h98H98h899h98HXN9NX3299
+# Token del tunel para que se conecte telegram (ngrok.com)
+TOKEN_BRIDGE=uN8UHh98H98h98H98h899h98HXN9NX3299
 
-	# End poind donde se conectara telegram
-	END_POIND_BOT=/my-bot
+# End poind donde se conectara telegram
+END_POIND_BOT=/my-bot
 
-	# Token de procedencia del Back
-	TOKEN_ORIGIN=uN8UHh98H98h98H98h899h98HXN9NX3299
+# Token de procedencia del Back
+TOKEN_ORIGIN=uN8UHh98H98h98H98h899h98HXN9NX3299
+
+# Url de concexion a la base de datos de mongoDB
+BD_CONNECTION_URL=mongodb://localhost:27017/bd_name
