--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"moment": "^2.24.0",
+		"mongoose": "^5.12.0",
 		"telegraf": "^3.36.0",
 		"telegram-keyboard": "^2.2.6"
 	},
