Change key value in wallet model

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,9 @@ TOKEN_ORIGIN=uN8UHh98H98h98H98h899h98HXN9NX3299
 
 # Url de concexion a la base de datos de mongoDB
 BD_CONNECTION_URL=mongodb://localhost:27017/bd_name
+
+# Url de la api de tron
+API_TRONGRID=https://api.trongrid.io/v1
+
+# ID del token que se va a usar como pago
+ASSET_ID=2323232
