--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"moment": "^2.29.1",
 		"mongoose": "^5.12.13",
 		"qrcode": "^1.4.4",
+		"string": "^3.3.3",
 		"telegraf": "^4.3.0",
 		"telegram-keyboard": "^2.2.6",
 		"validate.js": "^0.13.1"
