Add personal information and active API

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,6 @@ API_TRONGRID=https://api.trongrid.io/v1
 
 # ID del token que se va a usar como pago
 ASSET_ID=2323232
+
+# Codigo de validacion en el cliente
+ORIGIN_CLIENT_CODE
