--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
 	"dependencies": {
 		"awilix": "^4.3.4",
 		"axios": "^0.21.1",
+		"compression": "^1.7.4",
+		"cors": "^2.8.5",
 		"dotenv": "^8.6.0",
 		"express": "^4.17.1",
+		"express-async-errors": "^3.1.1",
+		"helmet": "^4.6.0",
 		"moment": "^2.29.1",
 		"mongoose": "^5.12.13",
 		"qrcode": "^1.4.4",
