Add error handler module

--- a/.env.example
+++ b/.env.example
@@ -29,4 +29,7 @@ API_TRONGRID=https://api.trongrid.io/v1
 ASSET_ID=2323232
 
 # Codigo de validacion en el cliente
-ORIGIN_CLIENT_CODE
+ORIGIN_CLIENT_CODE=
+
+# DNS de sentry
+SENTRY_DNS=
