--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 		"bot"
 	],
 	"dependencies": {
+		"@sentry/node": "^6.13.3",
+		"@sentry/tracing": "^6.13.3",
 		"awilix": "^4.3.4",
-		"axios": "^0.21.1",
+		"axios": "^0.21.4",
 		"compression": "^1.7.4",
 		"cors": "^2.8.5",
 		"dotenv": "^8.6.0",
@@ -25,6 +27,7 @@
 		"string": "^3.3.3",
 		"telegraf": "^4.3.0",
 		"telegram-keyboard": "^2.2.6",
+		"uuid": "^8.3.2",
 		"validate.js": "^0.13.1"
 	},
 	"devDependencies": {
